--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel ./public/index.html --out-dir docs",
+    "prebuild": "rimraf docs",
     "build": "parcel build ./public/index.html --out-dir docs --public-url ./"
   },
   "repository": {
@@ -30,6 +31,8 @@
     "eslint-plugin-vue": "^7.1.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-purgecss": "^3.0.0",
+    "purgecss": "^3.0.0",
+    "rimraf": "^3.0.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
